# toml-spanner

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  devsm.toml  snapshot-report.md  typos.toml
.cargo/: config.toml
benchmark/: Cargo.toml  plot.gnuplot  plot_compile.gnuplot
benchmark/data/: devsm.toml  extask.toml  zed-lock.toml  zed.toml
benchmark/src/: cargo.rs  compile_bench.rs  main.rs  static_input.rs
benchmark/src/cargo/: lockfile.rs  manifest.rs  package_id_spec.rs
benchmark/src/cargo/lockfile/: toml_spanner_impl.rs
benchmark/src/cargo/manifest/: toml_spanner_impl.rs
benchmark/src/compile_examples/: bin_null.rs  bin_toml.rs  bin_toml_span.rs  bin_toml_spanner.rs  bin_toml_with_serde.rs
crates/benchmark/: Cargo.toml  plot.gnuplot  plot_compile.gnuplot
crates/benchmark/data/: random.toml
crates/benchmark/src/: main.rs
crates/error-examples/: Cargo.toml
crates/error-examples/src/: main.rs
crates/fuzz/: Cargo.toml  README.md
crates/fuzz/.cargo/: config.toml
crates/fuzz/fuzz_targets/: datetime.rs  emit.rs  emit_reproject_edit.rs  emit_reproject_exact.rs  emit_reproject_identity.rs  emit_reproject_reorder_span_identity.rs  normalize.rs  owned_table.rs  parse_compare_toml.rs  parse_recoverable.rs  reproject.rs
crates/fuzz/src/: exact.rs  gen_toml.rs  gen_tree.rs  lib.rs  main.rs  parse_compare.rs  recoverable.rs
crates/macro-preprocessor/: Cargo.toml
crates/macro-preprocessor/src/: main.rs
crates/snapshot-tests/: Cargo.toml
crates/snapshot-tests/data/: inline_tables_multiline.toml
crates/snapshot-tests/src/: lib.rs
crates/snapshot-tests/tests/: annotate_snippets.rs  de.rs  parser.rs
crates/stress-tests/: Cargo.toml
crates/stress-tests/src/: main.rs
crates/third-party-integration-tests/: Cargo.toml
crates/third-party-integration-tests/src/: main.rs
crates/toml-spanner-macros/: Cargo.toml  README.md
crates/toml-spanner-macros-source/src/: ast.rs  codegen.rs  lit.rs  main.rs  template.rs  writer.rs
crates/toml-spanner-macros/src/: ast.rs  case.rs  codegen.rs  derive.md  lib.rs  lit.rs  util.rs
crates/toml-spanner-macros/src/writer/: cache.rs
crates/toml-test-harness/: Cargo.toml
error-examples/: Cargo.toml
error-examples/src/: main.rs
examples/: format_toml.rs  simple.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: datetime.rs  emit.rs  emit_reproject_edit.rs  emit_reproject_exact.rs  emit_reproject_identity.rs  emit_reproject_reorder.rs  emit_reproject_reorder_span_identity.rs  emit_roundtrip.rs  normalize.rs  parse_compare_toml.rs  parse_value.rs  reproject.rs
fuzz/src/: exact.rs  gen_toml.rs  gen_tree.rs  lib.rs  main.rs
integ-tests/: Cargo.toml
integ-tests/src/: lib.rs
integ-tests/tests/: de.rs  parser.rs  tokens.rs  walk.rs
integ-tests/tests/snapshots/: de__custom_error.snap  de__missing_required.snap  de__unknown_field.snap  parser__array_within_dotted-2.snap  parser__bad_booleans__false_trailing.snap  parser__bad_booleans__leading_f.snap  parser__bad_booleans__leading_t.snap  parser__bad_booleans__true_trailing.snap  (+110 more)
macro-preprocessor/src/: main.rs
snapshot-tests/: Cargo.toml
snapshot-tests/src/: lib.rs
snapshot-tests/tests/: annotate_snippets.rs  de.rs  parser.rs  valid.rs  walk.rs
snapshot-tests/tests/snapshots/: annotate_snippets__bad_codepoint.snap  annotate_snippets__custom_error.snap  annotate_snippets__duplicate_key.snap  annotate_snippets__eof.snap  annotate_snippets__missing_required.snap  annotate_snippets__newline_string.snap  annotate_snippets__table_redefinition.snap  annotate_snippets__unknown_field.snap  annotate_snippets__unterminated_string.snap  de__custom_error.snap  de__flattened.snap  de__missing_required.snap  de__nested_unexpected_key.snap  de__unknown_field.snap  parser__array_within_dotted-2.snap  parser__bad_booleans__false_trailing.snap  parser__bad_booleans__leading_f.snap  parser__bad_booleans__leading_t.snap  parser__bad_booleans__true_trailing.snap  parser__bad_codepoint.snap  parser__bad_floats__no_digit_after_neg.snap  parser__bad_floats__no_digit_after_pos.snap  parser__bad_floats__no_digit_before_dot_neg.snap  parser__bad_floats__no_digit_before_dot_pos.snap  parser__bad_floats__trailing_dec.snap  parser__bad_floats__trailing_exp.snap  parser__bad_floats__trailing_exp2.snap  parser__bad_floats__trailing_exp3.snap  parser__bad_floats__trailing_exp4.snap  parser__bad_floats__trailing_neg.snap  parser__bad_floats__trailing_pos.snap  parser__bad_floats__underscore_after_dot.snap  parser__bad_floats__underscore_after_exp.snap  parser__bad_floats__underscore_before_dot.snap  parser__bad_floats__underscore_before_exp.snap  parser__bad_inline_tables__duplicate_key.snap  parser__bad_inline_tables__eof.snap  parser__bad_inline_tables__newline.snap  parser__bad_inline_tables__only_comma.snap  parser__bad_inline_tables__trailing_comma.snap  (+170 more)
src/: arena.rs  arena_tests.rs  array.rs  array_tests.rs  de.rs  de_helpers.rs  de_tests.rs  dev.rs  emit.rs  emit_tests.rs  error.rs  error_tests.rs  helper.rs  impl_serde.rs  item.rs  lib.rs  main.rs  owned_item.rs  owned_item_tests.rs  parser.rs  parser_tests.rs  ser.rs  span.rs  span_tests.rs  static_doc.rs  static_doc_tests.rs  str.rs  str_tests.rs  table.rs  table_tests.rs  time.rs  time_tests.rs  tokens.rs  value.rs  value_tests.rs
src/emit/: normalization.rs  partition.rs  reprojection.rs  reprojection_tests.rs  test_data.rs
src/item/: array.rs  array_tests.rs  owned.rs  owned_tests.rs  table.rs  table_tests.rs  to_toml.rs
stress-tests/: Cargo.toml
stress-tests/src/: main.rs
tests/: derive.rs  derive_style.rs
third-party-integration-tests/: Cargo.toml
third-party-integration-tests/src/: main.rs
toml-spanner/: Cargo.toml  LICENSE-MIT  README.md
toml-spanner-macros/: README.md
toml-spanner-macros-source/: Cargo.toml
toml-spanner-macros-source/src/: ast.rs  case.rs  codegen.rs  lit.rs  main.rs  util.rs
toml-spanner-macros/src/: ast.rs  case.rs  codegen.rs  lib.rs  template.rs  util.rs  writer.rs
toml-spanner/src/: span.rs  value.rs
toml-test-harness/: Cargo.toml
(+268 files in other folders)
