[package]
name = "toml-spanner"
version = "0.4.0"
description = "High Performance Toml parser and deserializer that preserves span information with fast compile times."
authors = [
    "Thomas Dagenais <exrok@i64.dev>",
    "Embark <opensource@embark-studios.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/exrok/toml-spanner"
repository = "https://github.com/exrok/toml-spanner"
documentation = "https://docs.rs/toml-spanner"
readme = "README.md"
categories = ["parser-implementations", "config"]
rust-version = "1.90"

[profile.dev-fast]
inherits = "dev"
opt-level = 3
debug-assertions = true

[workspace]
resolver = "3"
members = ["snapshot-tests", "toml-spanner-macros"]
exclude = [
    "third-party-integration-tests",
    "fuzz",
    "benchmark",
    "toml-test-harness",
    "stress-tests",
    "toml-spanner-macros-source",
    "macro-preprocessor",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[features]
default = ["deserialization", "derive"]
deserialization = []
derive = ["dep:toml-spanner-macros"]
serde = ["dep:serde"]
reporting = ["dep:codespan-reporting"]

[dependencies]
codespan-reporting = { version = "0.13", optional = true }
foldhash = "0.2.0"
serde = { version = "1.0", optional = true }
toml-spanner-macros = { path = "toml-spanner-macros", optional = true }
zmij = "1.0.21"

[dev-dependencies]
oorandom = "11"
toml-spanner-macros = { path = "toml-spanner-macros" }
