[package]
name = "toml-spanner"
version = "1.0.1"
description = "High Performance Toml parser and deserializer that preserves span information with fast compile times."
authors = [
    "Thomas Dagenais <exrok@i64.dev>",
    "Embark <opensource@embark-studios.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/exrok/toml-spanner"
repository = "https://github.com/exrok/toml-spanner"
documentation = "https://docs.rs/toml-spanner"
readme = "README.md"
categories = ["parser-implementations", "config"]
rust-version = "1.90"
exclude = [
    "devsm.toml",
    "typos.toml",
    "tests/derive.rs",
    "tests/derive_tyle.rs",
]

[profile.dev-fast]
inherits = "dev"
opt-level = 3
debug-assertions = true

[workspace]
resolver = "3"
members = ["crates/snapshot-tests", "crates/toml-spanner-macros"]
exclude = [
    "crates/third-party-integration-tests",
    "crates/fuzz",
    "crates/benchmark",
    "crates/error-examples",
    "crates/toml-test-harness",
    "crates/stress-tests",
    "crates/toml-spanner-macros-source",
    "crates/macro-preprocessor",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
question_mark = "allow"
collapsible_if = "allow"
manual_range_contains = "allow"
manual_find = "allow"
needless_range_loop = "allow"
explicit_counter_loop = "allow"
manual_slice_size_calculation = "allow"

[features]
default = ["from-toml"]
from-toml = []
to-toml = ["from-toml", "dep:zmij"]
derive = ["dep:toml-spanner-macros"]
serde = ["dep:serde"]

[dependencies]
foldhash = "0.2.0"
serde = { version = "1.0", optional = true }
toml-spanner-macros = { version = "1", optional = true }
zmij = { version = "1.0.1", optional = true }

[dev-dependencies]
anstream = "0.6"
anstyle-svg = "1.1.0"
oorandom = "11"
toml-spanner-macros = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
