[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = 1
[dependencies]
toml-spanner.path = ".."
jsony_bench.path = "/home/user/Projects/git/jsony/jsony_bench"
oorandom = "11.1.5"
toml = { version = "*" }
toml-span = { version = "*" }
# toml = { version = "0.9.11", features = ["preserve_order"] }
