[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"


[dependencies]
jsony_bench = { git = "https://github.com/exrok/jsony" }
toml-spanner.path = ".."
oorandom = "11.1.5"
toml = { version = "1", features = ["serde", "parse", "display", "fast_hash"] }
toml_edit = "0.25"
toml-span = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
url = "2"
semver = { version = "1", features = ["serde"] }
serde-untagged = "0.1.9"
unicode-ident = "1"
serde-value = "0.7.0"


[features]
cargo-bench = []
