[package]
name = "benchmark-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
toml = { version = "1", features = ["preserve_order"] }


[dependencies.toml-spanner]
path = ".."

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package."toml"]
debug-assertions = false
[profile.release.package."toml_parser"]
debug-assertions = false
[profile.release.package."serde_spanned"]
debug-assertions = false
[profile.release.package."toml_datetime"]
debug-assertions = false

[[bin]]
name = "parse_value"
path = "fuzz_targets/parse_value.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_compare_toml"
path = "fuzz_targets/parse_compare_toml.rs"
test = false
doc = false
bench = false
