[package]
name = "fuzz"
version = "0.0.0"
publish = false
edition = "2024"
default-run = "fuzz"

[package.metadata]
cargo-fuzz = true

[dependencies]
foldhash = "0.2.0"
libfuzzer-sys = "0.4"
toml = { version = "1", features = ["preserve_order", "fast_hash"] }
toml_parser = { version = "1", features = ["unsafe"] }


[dependencies.toml-spanner]
path = "../.."
features = ["to-toml", "from-toml"]

[profile.release]
lto = "thin"
codegen-units = 1

[profile.release.package."toml"]
debug-assertions = false
[profile.release.package."toml_parser"]
debug-assertions = false
[profile.release.package."serde_spanned"]
debug-assertions = false
[profile.release.package."toml_datetime"]
debug-assertions = false

[[bin]]
name = "parse_value"
path = "fuzz_targets/parse_value.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_compare_toml"
path = "fuzz_targets/parse_compare_toml.rs"
test = false
doc = false
bench = false

[[bin]]
name = "datetime"
path = "fuzz_targets/datetime.rs"
test = false
doc = false
bench = false

[[bin]]
name = "emit"
path = "fuzz_targets/emit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "normalize"
path = "fuzz_targets/normalize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "reproject"
path = "fuzz_targets/reproject.rs"
test = false
doc = false
bench = false

[[bin]]
name = "emit_reproject_identity"
path = "fuzz_targets/emit_reproject_identity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "emit_reproject_edit"
path = "fuzz_targets/emit_reproject_edit.rs"
test = false
doc = false
bench = false

[[bin]]
name = "emit_reproject_reorder"
path = "fuzz_targets/emit_reproject_reorder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "emit_roundtrip"
path = "fuzz_targets/emit_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "emit_reproject_exact"
path = "fuzz_targets/emit_reproject_exact.rs"
test = false
doc = false
bench = false

[[bin]]
name = "emit_reproject_reorder_span_identity"
path = "fuzz_targets/emit_reproject_reorder_span_identity.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_recoverable"
path = "fuzz_targets/parse_recoverable.rs"
test = false
doc = false
bench = false

[[bin]]
name = "owned_table"
path = "fuzz_targets/owned_table.rs"
test = false
doc = false
bench = false
